--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DOCKER_MACHINE_NAME=jupyterhub
 DOCKER_NETWORK_NAME=jupyterhub-network
 
 # Single-user Jupyter Notebook server container image
-DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:76402a27fd13
+DOCKER_NOTEBOOK_IMAGE=tensorflow/tensorflow:2.2.0-gpu-jupyter
 
 # the local image we use, after pinning jupyterhub version
 LOCAL_NOTEBOOK_IMAGE=jupyterhub-user
