--- a/singleuser/Dockerfile
+++ b/singleuser/Dockerfile
@@ -1,6 +1,15 @@
 ARG DOCKER_NOTEBOOK_IMAGE
 FROM $DOCKER_NOTEBOOK_IMAGE
 ARG JUPYTERHUB_VERSION
+ARG NB_USER=jovyan
+ARG NB_UID=1000
+ARG NB_GID=100
+USER root
+ENV DEBIAN_FRONTEND=noninteractive
+USER 1000
+WORKDIR /home/jovyan
+ARG PYTHON_VERSION=default
+RUN /bin/sh -c mkdir /home/$NB_USER/work &&     fix-permissions /home/$NB_USER
 RUN python3 -m pip install --no-cache jupyterhub==$JUPYTERHUB_VERSION
 RUN python3 -m pip install --no-cache numpy==1.18.4
 RUN python3 -m pip install --no-cache pandas==1.0.4 `matplotlib==3.2.1`
