--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DOCKER_MACHINE_NAME=jupyterhub
 DOCKER_NETWORK_NAME=jupyterhub-network
 
 # Single-user Jupyter Notebook server container image
-DOCKER_NOTEBOOK_IMAGE=tensorflow/tensorflow:2.2.0-gpu-jupyter
+DOCKER_NOTEBOOK_IMAGE=jupyter/minimal-notebook:76402a27fd13
 
 # the local image we use, after pinning jupyterhub version
 LOCAL_NOTEBOOK_IMAGE=jupyterhub-user
@@ -24,7 +24,7 @@ LOCAL_NOTEBOOK_IMAGE=jupyterhub-user
 # Notebook directory in the container.
 # This will be /home/jovyan/work if the default
 # This directory is stored as a docker volume for each user
-DOCKER_NOTEBOOK_DIR=/tf/notebooks
+DOCKER_NOTEBOOK_DIR=/home/jovyan/work
 
 # Docker run command to use when spawning single-user containers
 DOCKER_SPAWN_CMD=start-singleuser.sh
